cambios de ruta de url

--- a/Home.html
+++ b/Home.html
@@ -28,7 +28,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Poner la tuya</a></li>
-                      <li><a class="dropdown-item" href="#">Articulos</a></li>
+                      <li><a class="dropdown-item" href="/Forms/articulo.html">Articulos</a></li>
                       <li><a class="dropdown-item" href="/Forms/Factura.html">Facturas</a></li>
                       <li><a class="dropdown-item" href="#">Pedidos</a></li>
                      
