--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
                       <li><a class="dropdown-item" href="#">Poner la tuya</a></li>
                       <li><a class="dropdown-item" href="/Forms/articulo.html">Articulos</a></li>
                       <li><a class="dropdown-item" href="/Forms/Factura.html">Facturas</a></li>
-                      <li><a class="dropdown-item" href="#">Pedidos</a></li>
+                      <li><a class="dropdown-item" href="/Forms/Pedido.html">Pedidos</a></li>
                      
                     </ul>
                   </li>
