--- a/Home.html
+++ b/Home.html
@@ -27,11 +27,11 @@
                       Consumo de API' Rest
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Poner la tuya</a></li>
+                      <li><a class="dropdown-item" href="/Forms/Socio.html">Socio</a></li>
                       <li><a class="dropdown-item" href="/Forms/articulo.html">Articulos</a></li>
                       <li><a class="dropdown-item" href="/Forms/Factura.html">Facturas</a></li>
                       <li><a class="dropdown-item" href="/Forms/Pedido.html">Pedidos</a></li>
-                     
+                      
                     </ul>
                   </li>
                 </ul>
