--- a/Forms/Socio.html
+++ b/Forms/Socio.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="JS/Socio.js"></script>
+        <script src="/JS/Socio.js"></script>
         <link rel="shortcut icon" href="#">
         
 </head>
@@ -23,9 +23,9 @@
                 </div>
                 <div class="col-6">
                     <h3>Agregar Socios</h3>
-                    
                 </div>
-                <div class="box-body">
+            </div>
+             <div class="box-body">
                     <div class="table table-responsive">
                         <table class="table table_hover">
                             <thead>
