--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Grupo 8</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -36,13 +36,45 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <input class="form-control me-2" type="Buscar" placeholder="Que quiere Buscar?" aria-label="Buscar">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
               </div>
             </div>
           </nav>
     </header>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Número de Cuenta</th>
+          <th scope="col">Nombre</th>
+          <th scope="col">Formulario Desarrollado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>20181031437</td>
+          <td>Sergio David Quiroz Meza</td>
+          <td>Socio</td>
+        </tr>
+        <tr>
+          <td>20161000940</td>
+          <td>Fernando José Galo Vásquez</td>
+          <td>Articulo</td>
+        </tr>
+        <tr>
+          <td>20111005571</td>
+          <td>Lincoln Noé López Cabrera</td>
+          <td>Factura</td>
+        </tr>
+        <tr>
+          <td>20131001816</td>
+          <td>Ramon Antonio Salgado Colindres</td>
+          <td>Pedido</td>
+        </tr>
+      </tbody>
+    </table>
 
 
 
