--- a/Informacion.html
+++ b/Informacion.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     
     <h1>
         Información Grupo 8_20
     </h1>
+
+    <div>
+        <p>
+            El Formulario Factura cumple la utilidad de realizar las gestiones CRUD relacionadas a las facturas, 
+            como ser principalmente visualizar todas facturas existentes, visualizar una factura específica y poder
+             realizar la edición o actualización de los datos de la misma, como su respectiva eliminación. Todo íntimamente
+              relacionado a la tabla ma_facturas.
+        </p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
