adicion de informacion para articulos

--- a/Informacion.html
+++ b/Informacion.html
@@ -22,6 +22,14 @@
              realizar la edición o actualización de los datos de la misma, como su respectiva eliminación. Todo íntimamente
               relacionado a la tabla ma_facturas.
         </p>
+        <div>
+            <p>
+                El Formulario Articulos cumple la utilidad solicitada de realizar gestiones CRUD para los articulos, 
+                como ser principalmente visualizar todos los articulos existentes, visualizar un articulo en específico y 
+                actualizar los datos actuales de ese articulo,tambien con la capacidad para eliminar el articulo elegido. 
+                Todo en relación a la tabla ma_articulos.
+            </p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
