Ingreso de informacion

--- a/Informacion.html
+++ b/Informacion.html
@@ -30,6 +30,14 @@
                 Todo en relación a la tabla ma_articulos.
             </p>
         </div>
+        <div>
+            <p>
+                El Formulario Pedidos cumple la utilidad solicitada de realizar gestiones CRUD para los pedidos, 
+                como ser principalmente visualizar todos los pedidos existentes, visualizar un Pedido en específico y 
+                actualizar los datos actuales de ese Pedido,tambien con la capacidad para eliminar el articulo elegido. 
+                Todo en relación a la tabla ma_pedidos.
+            </p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
