--- a/Informacion.html
+++ b/Informacion.html
@@ -38,7 +38,15 @@
                 Todo en relación a la tabla ma_pedidos.
             </p>
         </div>
+        <div>
+            <p>
+                El Formulario Socios_negocios cumple con la utilidad de realizar gestiones CRUD para los socios_negocios,
+                para visualizar principalmente a todos los socios,a un solo socio y tambien actualizar la informacion de un socio , 
+                tiene la eleccion de elimar a cualquier socio.Todo esto esta connectado con la tabla_socio.
+            </p>
+        </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
