--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo 8</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/CSS/HomeEstilo.css">
 </head>
 <body>
    
@@ -13,7 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="https://www.unah.edu.hn/themes/portalunah/assets/images/logo-unah.png" alt="" width="100" height="45">Grupo 8_20</a>
+                <img src="https://www.unah.edu.hn/themes/portalunah/assets/images/logo-unah.png" alt="" width="150" height="80"><b>Grupo 8_20</b></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -44,7 +45,7 @@
           </nav>
     </header>
 
-    <table class="table">
+    <table>
       <thead>
         <tr>
           <th scope="col">Número de Cuenta</th>
@@ -70,7 +71,7 @@
         </tr>
         <tr>
           <td>20131001816</td>
-          <td>Ramon Antonio Salgado Colindres</td>
+          <td>Ramn Antonio Salgado Colindres</td>
           <td>Pedido</td>
         </tr>
       </tbody>
